--- a/packages/mobx-react/package.json
+++ b/packages/mobx-react/package.json
@@ -36,7 +36,7 @@
     },
     "homepage": "https://mobx.js.org",
     "dependencies": {
-        "mobx-react-lite": "^3.4.0"
+        "mobx-react-lite": "3.4.0"
     },
     "peerDependencies": {
         "mobx": "^6.1.0",
@@ -52,7 +52,7 @@
     },
     "devDependencies": {
         "mobx": "^6.7.0",
-        "mobx-react-lite": "^3.4.0"
+        "mobx-react-lite": "3.4.0"
     },
     "keywords": [
         "mobx",
